Blog Trio Monstro de One piece Finalizado

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,23 +1,19 @@
 <div class="container__big-card">
 
   <div class="big-card__photo">
-    <img src="https://sm.ign.com/ign_br/screenshot/default/blob_hbbk.jpg"
+    <img src="{{ photoCover }}"
     alt=""
     height="200px"
     srcset="">
   </div>
 
   <div class="big-card__title">
-    <a href="">
-      <h1>Saio a nova versão do Angular</h1>
-    </a>
+      <h1> {{ cardTitle }} </h1>
   </div>
 
   <div class="big-card__description">
-    <a href="">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eum, odit illum, earum quis id impedit saepe facilis hic sunt repellat architecto quaerat consectetur in iusto est nihil molestiae doloremque.
+        {{ cardDescription }}
       </p>
-    </a>
   </div>
 </div>
