--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,15 +1,24 @@
 .container__small-card {
-  width: 700px;
+  width: 100%;
   margin-bottom: 15px;
+  margin-left: 20px;
 }
 
 .container__small-card-content {
+  padding-right: 20px;
+  padding-left: 20px;
+
   display: flex;
   flex-direction: row;
+  align-items: center;
+
+  width: 100%;
+  gap: 30px;
 }
 
 .small-card__photo > img {
-  width: 200px;
+  width: 400px;
+  height: 300px;
   min-width: 200px;
   margin-right: 20px;
 }
