Trabalho ADM IFTM-Empreendedorismo

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -3,11 +3,13 @@
   <ul>
     <li><a [routerLink]="['']">Home</a></li>
     <li> <span> • </span> </li>
-    <li><a [routerLink]="['hero', 1]">Luffy</a></li>
+    <li><a [routerLink]="['hero', 1]">Planejar</a></li>
     <li> <span> • </span> </li>
-    <li><a [routerLink]="['hero', 2]">Zoro</a></li>
+    <li><a [routerLink]="['hero', 2]">Organizar</a></li>
     <li> <span> • </span> </li>
-    <li><a [routerLink]="['hero', 3]">Sanji</a></li>
+    <li><a [routerLink]="['hero', 3]">Dirigir</a></li>
+    <li> <span> • </span> </li>
+    <li><a [routerLink]="['hero', 4]">Controlar</a></li>
   </ul>
 
 </div>
