--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,9 +3,12 @@
 <div class="container__articles">
   <div class="articles__main">
     <app-big-card
-    photoCover="https://uploads.spiritfanfiction.com/historias/capitulos/202010/one-piece-a-busca-20770605-171020201507.jpg"
-    cardTitle="Trio Monstro"
-    cardDescription="Em One Piece, os Piratas do Chapéu de Palha contam com um trio de lutadores excepcionais, conhecido como Monster Trio/Trio Monstro, que são essenciais em suas batalhas mais significativas. Este triunvirato é composto por Luffy, Zoro e Sanji, cada um deles habilidoso e poderoso à sua maneira. A maior força é encontrada em Luffy, o capitão, seguido por Zoro, e depois, de forma muito próxima, vem Sanji. O impacto deste trio na série é inegável, e sua relevância se tornará ainda mais aparente com o desenrolar da Saga Final de One Piece."
+    photoCover="https://gestaodesegurancaprivada.com.br/wp-content/uploads/gestao-1280x720.jpg"
+    cardTitle="Administração Contemporânea"
+    cardDescription="A Administração Contemporânea estuda uma série de teorias dentre as quais se averigua quais os modelos de estruturas organizacionais são os mais adequados para o sucesso da empresa, os estudos teóricos procuram explicar como as empresas funcionam em diferentes condições de acordo com ambiente interno e externo.
+    Para isso, existem as funções administrativas do empreendedor, são quatro: planejar, organizar, dirigir e controlar. Popularizado como P.O.D.C.
+    Em resumo, Administrar é a capacidade que o individuo adquire de, alinhar seus pensamentos e ideias com os recursos disponíveis, a fim de alcançar
+    seu objetivo, sendo por meio de experiências obtidas (falhas ou sucessos) e/ou técnicas já consolidadas."
     class="item"/>
   </div>
 
