Trabalho ADM IFTM-Empreendedorismo Add mais um tema

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,14 +1,19 @@
 <div class="container__big-card">
 
+
   <div class="big-card__photo">
+    <a [routerLink]="['hero', id]">
     <img src="{{ photoCover }}"
     alt=""
     height="200px"
     srcset="">
+  </a>
   </div>
 
   <div class="big-card__title">
+    <a [routerLink]="['hero', id]">
       <h1> {{ cardTitle }} </h1>
+    </a>
   </div>
 
   <div class="big-card__description">
