--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -3,13 +3,9 @@
   <ul>
     <li><a [routerLink]="['']">Home</a></li>
     <li> <span> • </span> </li>
-    <li><a [routerLink]="['hero', 1]">Planejar</a></li>
+    <li><a [routerLink]="['hero', 5]">ADM Contemporânea</a></li>
     <li> <span> • </span> </li>
-    <li><a [routerLink]="['hero', 2]">Organizar</a></li>
-    <li> <span> • </span> </li>
-    <li><a [routerLink]="['hero', 3]">Dirigir</a></li>
-    <li> <span> • </span> </li>
-    <li><a [routerLink]="['hero', 4]">Controlar</a></li>
+    <li><a [routerLink]="['hero', 6]">Areas Funcionais da ADM</a></li>
   </ul>
 
 </div>
