--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,10 @@
+<app-menu-bar />
 <app-menu-title />
 
 <div class="container__articles">
   <div class="articles__main">
     <app-big-card
+    id="5"
     photoCover="https://gestaodesegurancaprivada.com.br/wp-content/uploads/gestao-1280x720.jpg"
     cardTitle="Administração Contemporânea"
     cardDescription="A Administração Contemporânea estuda uma série de teorias dentre as quais se averigua quais os modelos de estruturas organizacionais são os mais adequados para o sucesso da empresa, os estudos teóricos procuram explicar como as empresas funcionam em diferentes condições de acordo com ambiente interno e externo.
@@ -13,12 +15,27 @@
   </div>
 
   <div class="articles__others">
-    @for (item of data; track $index) {
-      <app-small-card
-      id="{{item.id}}"
-      photoCard="{{item.photo}}"
-      cardTitle="{{item.title}}"
-      />
-    }
+    <app-big-card
+    id="6"
+    photoCover="https://0701.static.prezi.com/preview/v2/aa3qk6fv7ebhz6ahmho7jtaxft6jc3sachvcdoaizecfr3dnitcq_3_0.png"
+    cardTitle="Areas Funcionais da ADM"
+    cardDescription="As áreas funcionais da administração referem-se às diferentes divisões ou departamentos em uma organização, cada uma responsável por funções específicas que contribuem para o funcionamento geral da empresa. As principais áreas funcionais incluem:
+
+    Marketing: Responsável por identificar e satisfazer as necessidades dos clientes, promovendo produtos ou serviços e gerenciando estratégias de comunicação e vendas.
+
+    Finanças: Encarregada de gerenciar os recursos financeiros da empresa, incluindo orçamento, investimentos, controle de custos, análise de rentabilidade e gestão de riscos financeiros.
+
+    Recursos Humanos: Concentra-se no recrutamento, seleção, treinamento, desenvolvimento e gerenciamento de pessoal, além de lidar com questões relacionadas a salários, benefícios e relações de trabalho.
+
+    Produção ou Operações: Responsável pela produção ou entrega de produtos ou serviços, incluindo planejamento de produção, controle de qualidade, gestão de estoques e logística.
+
+    Pesquisa e Desenvolvimento (P&D): Dedica-se à criação e aprimoramento de produtos, processos e tecnologias inovadoras que impulsionam o crescimento e a competitividade da empresa.
+
+    TI (Tecnologia da Informação): Encarregada de gerenciar sistemas de informação, redes, hardware e software para apoiar as operações da empresa, comunicação interna e externa, análise de dados e tomada de decisões.
+
+    Administração Geral: Responsável pela coordenação e integração das diferentes áreas funcionais, definição de objetivos organizacionais, formulação de políticas e estratégias, e tomada de decisões de alto nível.
+
+Cada área funcional desempenha um papel essencial no sucesso e na eficiência global da organização, trabalhando em conjunto para atingir os objetivos e metas estabelecidos."
+    class="item"/>
   </div>
 </div>
