Trabalho ADM IFTM-Empreendedorismo Funcional

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="small-card__title">
-      <a [routerLink]="['hero', id]">
+      <a [routerLink]="['sub', id]">
         <h1>{{ cardTitle }}</h1>
       </a>
     </div>
