--- a/src/app/hero-p/hero-p.component.html
+++ b/src/app/hero-p/hero-p.component.html
@@ -169,6 +169,122 @@
         description="{{data[8].info}}"
         />
       }
+
+      @else if (id == "21") {
+        <div class="hero__cover">
+          <img src="{{data[5].photo}}" alt="" srcset="">
+        </div>
+
+        <div class="hero__title">
+          <h1>{{data[5].title}}</h1>
+        </div>
+
+        <div class="hero__info">
+          <p>{{data[5].info}}</p>
+        </div>
+
+        <app-small-card
+        photoCard="{{data[5].photoAtkOne}}"
+        cardTitle="{{data[5].titleAtkOne}}"
+        description="{{data[5].descriptionAtkOne}}"
+        />
+        <app-small-card
+        photoCard="{{data[5].photoAtkTwo}}"
+        cardTitle="{{data[5].titleAtkTwo}}"
+        description="{{data[5].descriptionAtkTwo}}"
+        />
+        <app-small-card
+        photoCard="{{data[5].photoAtkThree}}"
+        cardTitle="{{data[5].titleAtkThree}}"
+        description="{{data[5].descriptionAtkThree}}"
+        />
+      }
+
+      @else if (id == "22") {
+        <div class="hero__cover">
+          <img src="{{data[6].photo}}" alt="" srcset="">
+        </div>
+
+        <div class="hero__title">
+          <h1>{{data[6].title}}</h1>
+        </div>
+
+        <div class="hero__info">
+          <p>{{data[6].info}}</p>
+        </div>
+
+        <app-small-card
+        photoCard="{{data[6].photoAtkOne}}"
+        cardTitle="{{data[6].titleAtkOne}}"
+        description="{{data[6].descriptionAtkOne}}"
+        />
+        <app-small-card
+        photoCard="{{data[6].photoAtkTwo}}"
+        cardTitle="{{data[6].titleAtkTwo}}"
+        description="{{data[6].descriptionAtkTwo}}"
+        />
+      }
+
+      @else if (id == "23") {
+        <div class="hero__cover">
+          <img src="{{data[7].photo}}" alt="" srcset="">
+        </div>
+
+        <div class="hero__title">
+          <h1>{{data[7].title}}</h1>
+        </div>
+
+        <div class="hero__info">
+          <p>{{data[7].info}}</p>
+        </div>
+
+        <app-small-card
+        photoCard="{{data[7].photoAtkOne}}"
+        cardTitle="{{data[7].titleAtkOne}}"
+        description="{{data[7].descriptionAtkOne}}"
+        />
+        <app-small-card
+        photoCard="{{data[7].photoAtkTwo}}"
+        cardTitle="{{data[7].titleAtkTwo}}"
+        description="{{data[7].descriptionAtkTwo}}"
+        />
+        <app-small-card
+        photoCard="{{data[7].photoAtkThree}}"
+        cardTitle="{{data[7].titleAtkThree}}"
+        description="{{data[7].descriptionAtkThree}}"
+        />
+      }
+
+      @else if (id == "24") {
+        <div class="hero__cover">
+          <img src="{{data[8].photo}}" alt="" srcset="">
+        </div>
+
+        <div class="hero__title">
+          <h1>{{data[8].title}}</h1>
+        </div>
+
+        <div class="hero__info">
+          <p>{{data[8].info}}</p>
+        </div>
+
+        <app-small-card
+        photoCard="{{data[8].photoAtkOne}}"
+        cardTitle="{{data[8].titleAtkOne}}"
+        description="{{data[8].descriptionAtkOne}}"
+        />
+        <app-small-card
+        photoCard="{{data[8].photoAtkTwo}}"
+        cardTitle="{{data[8].titleAtkTwo}}"
+        description="{{data[8].descriptionAtkTwo}}"
+        />
+        <app-small-card
+        photoCard="{{data[8].photoAtkThree}}"
+        cardTitle="{{data[8].titleAtkThree}}"
+        description="{{data[8].descriptionAtkThree}}"
+        />
+      }
+
       @else {
         <div class="hero__cover">
           <img src="{{data[3].photo}}" alt="" srcset="">
