Trabalho ADM IFTM-Empreendedorismo Funcional

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -6,6 +6,8 @@
       <li><a [routerLink]="['hero', 5]">ADM Contemporânea</a></li>
       <li> <span> • </span> </li>
       <li><a [routerLink]="['hero', 6]">Areas Funcionais da ADM</a></li>
+      <li> <span> • </span> </li>
+      <li><a [routerLink]="['hero', 15]">Sustentabilidade</a></li>
     </ul>
 
 </div>
