--- a/src/app/hero-p/hero-p.component.html
+++ b/src/app/hero-p/hero-p.component.html
@@ -278,10 +278,109 @@
         cardTitle="{{data[8].titleAtkTwo}}"
         description="{{data[8].descriptionAtkTwo}}"
         />
+      }
+      @else if (id == "15") {
+        <div class="hero__cover">
+          <img src="{{data[10].photo}}" alt="" srcset="">
+        </div>
+
+        <div class="hero__title">
+          <h1>{{data[10].title}}</h1>
+        </div>
+
+        <div class="hero__info">
+          <p>{{data[10].info}}</p>
+        </div>
+
         <app-small-card
-        photoCard="{{data[8].photoAtkThree}}"
-        cardTitle="{{data[8].titleAtkThree}}"
-        description="{{data[8].descriptionAtkThree}}"
+        id="16"
+        photoCard="{{data[0].photoAtkOne}}"
+        cardTitle="{{data[0].titleAtkOne}}"
+        description="{{data[0].descriptionAtkOne}}"
+        />
+        <app-small-card
+        id="17"
+        photoCard="{{data[0].photoAtkTwo}}"
+        cardTitle="{{data[0].titleAtkTwo}}"
+        description="{{data[0].descriptionAtkTwo}}"
+        />
+        <app-small-card
+        id="18"
+        photoCard="{{data[0].photoAtkTwo}}"
+        cardTitle="{{data[0].titleAtkTwo}}"
+        description="{{data[0].descriptionAtkTwo}}"
+        />
+      }
+      @else if (id == "16") {
+        <div class="hero__cover">
+          <img src="{{data[11].photo}}" alt="" srcset="">
+        </div>
+
+        <div class="hero__title">
+          <h1>{{data[11].title}}</h1>
+        </div>
+
+        <div class="hero__info">
+          <p>{{data[11].info}}</p>
+        </div>
+
+        <app-small-card
+        photoCard="{{data[11].photoAtkOne}}"
+        cardTitle="{{data[11].titleAtkOne}}"
+        description="{{data[11].descriptionAtkOne}}"
+        />
+        <app-small-card
+        photoCard="{{data[11].photoAtkTwo}}"
+        cardTitle="{{data[11].titleAtkTwo}}"
+        description="{{data[11].descriptionAtkTwo}}"
+        />
+      }
+      @else if (id == "17") {
+        <div class="hero__cover">
+          <img src="{{data[12].photo}}" alt="" srcset="">
+        </div>
+
+        <div class="hero__title">
+          <h1>{{data[12].title}}</h1>
+        </div>
+
+        <div class="hero__info">
+          <p>{{data[12].info}}</p>
+        </div>
+
+        <app-small-card
+        photoCard="{{data[12].photoAtkOne}}"
+        cardTitle="{{data[12].titleAtkOne}}"
+        description="{{data[12].descriptionAtkOne}}"
+        />
+        <app-small-card
+        photoCard="{{data[12].photoAtkTwo}}"
+        cardTitle="{{data[12].titleAtkTwo}}"
+        description="{{data[12].descriptionAtkTwo}}"
+        />
+      }
+      @else if (id == "18") {
+        <div class="hero__cover">
+          <img src="{{data[13].photo}}" alt="" srcset="">
+        </div>
+
+        <div class="hero__title">
+          <h1>{{data[13].title}}</h1>
+        </div>
+
+        <div class="hero__info">
+          <p>{{data[13].info}}</p>
+        </div>
+
+        <app-small-card
+        photoCard="{{data[13].photoAtkOne}}"
+        cardTitle="{{data[13].titleAtkOne}}"
+        description="{{data[13].descriptionAtkOne}}"
+        />
+        <app-small-card
+        photoCard="{{data[13].photoAtkTwo}}"
+        cardTitle="{{data[13].titleAtkTwo}}"
+        description="{{data[13].descriptionAtkTwo}}"
         />
       }
 
