Trabalho ADM IFTM-Empreendedorismo Funcional

--- a/src/app/hero-p/hero-p.component.html
+++ b/src/app/hero-p/hero-p.component.html
@@ -278,6 +278,11 @@
         cardTitle="{{data[8].titleAtkTwo}}"
         description="{{data[8].descriptionAtkTwo}}"
         />
+        <app-small-card
+        photoCard="{{data[8].photoAtkThree}}"
+        cardTitle="{{data[8].titleAtkThree}}"
+        description="{{data[8].descriptionAtkThree}}"
+        />
       }
       @else if (id == "15") {
         <div class="hero__cover">
