--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -40,12 +40,9 @@ Cada área funcional desempenha um papel essencial no sucesso e na eficiência g
   <div class="articles__main">
     <app-big-card
     id="15"
-    photoCover="https://gestaodesegurancaprivada.com.br/wp-content/uploads/gestao-1280x720.jpg"
-    cardTitle="Administração Contemporânea"
-    cardDescription="A Administração Contemporânea estuda uma série de teorias dentre as quais se averigua quais os modelos de estruturas organizacionais são os mais adequados para o sucesso da empresa, os estudos teóricos procuram explicar como as empresas funcionam em diferentes condições de acordo com ambiente interno e externo.
-    Para isso, existem as funções administrativas do empreendedor, são quatro: planejar, organizar, dirigir e controlar. Popularizado como P.O.D.C.
-    Em resumo, Administrar é a capacidade que o individuo adquire de, alinhar seus pensamentos e ideias com os recursos disponíveis, a fim de alcançar
-    seu objetivo, sendo por meio de experiências obtidas (falhas ou sucessos) e/ou técnicas já consolidadas."
+    photoCover="https://fia.com.br/wp-content/uploads/2023/09/Imagem7.png"
+    cardTitle="Sustentabilidade"
+    cardDescription="O que é sustentabilidade? Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental."
     class="item"/>
   </div>
 
