Trabalho ADM IFTM-Empreendedorismo add Sustentabilidade

--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   margin-right: 250px;
   margin-left: 250px;
-
+  font-size: large;
 }
 
 .container__menu-bar > ul > li{
