--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,19 +1,27 @@
+* {
+  background-color: #d2d2d2;
+  border: 5px solid #d2d2d2;
+  border-radius: 5px;
+}
+
 .container__big-card {
 
   margin-left: 20px;
   margin-right: 20px;
-  width: 400px;
-  height: 400px;
+  width: auto;
+  height: auto;
 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+
 }
 
 .big-card__title > a > h1 {
   margin-top: 15px;
   font-size: 20px;
+
 }
 
 .big-card__description {
