--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -4,11 +4,13 @@
 
 .container__menu-title > h1 {
   margin-top: 15px;
-  margin-bottom: 15px;
-  font-size: 135px;
-  font-family: 'segoe UI';
+  margin-bottom: 5px;
+  padding-top: 25px;
+  font-size: 80px;
+  font-family: "Alegreya";
   display: flex;
   justify-content: center;
+
 }
 
 .container__menu-title > hr {
