--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,3 +1,9 @@
+* {
+  background-color: #d2d2d2;
+  border: 5px solid #d2d2d2;
+  border-radius: 5px;
+}
+
 .container__small-card {
   width: 100%;
   margin-bottom: 15px;
@@ -5,12 +11,13 @@
 }
 
 .container__small-card-content {
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: auto;
+  padding-left: auto;
 
   display: flex;
   flex-direction: row;
   align-items: center;
+
 
   width: 100%;
   gap: 30px;
@@ -21,6 +28,8 @@
   height: 300px;
   min-width: 200px;
   margin-right: 20px;
+  border: 5px solid #d2d2d2;
+  border-radius: 10px;
 }
 .small-card__title {
   display: flex;
