--- a/src/app/hero-p/hero-p.component.css
+++ b/src/app/hero-p/hero-p.component.css
@@ -6,13 +6,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 .hero__cover > img {
   width: 600px;
   min-width: 400px;
   height: 400px;
-  border: 5px solid grey;
+  border: 10px solid #d2d2d2;
   border-radius: 5px;
 }
 
