--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,49 +1,53 @@
-<app-menu-title />
+<div class="container__all">
+  <app-menu-title />
 
-<div class="container__articles">
-  <div class="articles__main">
-    <app-big-card
-    id="5"
-    photoCover="https://gestaodesegurancaprivada.com.br/wp-content/uploads/gestao-1280x720.jpg"
-    cardTitle="Administração Contemporânea"
-    cardDescription="A Administração Contemporânea estuda uma série de teorias dentre as quais se averigua quais os modelos de estruturas organizacionais são os mais adequados para o sucesso da empresa, os estudos teóricos procuram explicar como as empresas funcionam em diferentes condições de acordo com ambiente interno e externo.
-    Para isso, existem as funções administrativas do empreendedor, são quatro: planejar, organizar, dirigir e controlar. Popularizado como P.O.D.C.
-    Em resumo, Administrar é a capacidade que o individuo adquire de, alinhar seus pensamentos e ideias com os recursos disponíveis, a fim de alcançar
-    seu objetivo, sendo por meio de experiências obtidas (falhas ou sucessos) e/ou técnicas já consolidadas."
-    class="item"/>
+
+  <div class="container__articles">
+    <div class="articles__main">
+      <app-big-card
+      id="5"
+      photoCover="https://gestaodesegurancaprivada.com.br/wp-content/uploads/gestao-1280x720.jpg"
+      cardTitle="Administração Contemporânea"
+      cardDescription="A Administração Contemporânea estuda uma série de teorias dentre as quais se averigua quais os modelos de estruturas organizacionais são os mais adequados para o sucesso da empresa, os estudos teóricos procuram explicar como as empresas funcionam em diferentes condições de acordo com ambiente interno e externo.
+      Para isso, existem as funções administrativas do empreendedor, são quatro: planejar, organizar, dirigir e controlar. Popularizado como P.O.D.C.
+      Em resumo, Administrar é a capacidade que o individuo adquire de, alinhar seus pensamentos e ideias com os recursos disponíveis, a fim de alcançar
+      seu objetivo, sendo por meio de experiências obtidas (falhas ou sucessos) e/ou técnicas já consolidadas."
+      class="item"/>
+    </div>
+
+    <div class="articles__others">
+      <app-big-card
+      id="6"
+      photoCover="https://0701.static.prezi.com/preview/v2/aa3qk6fv7ebhz6ahmho7jtaxft6jc3sachvcdoaizecfr3dnitcq_3_0.png"
+      cardTitle="Areas Funcionais da ADM"
+      cardDescription="As áreas funcionais da administração referem-se às diferentes divisões ou departamentos em uma organização, cada uma responsável por funções específicas que contribuem para o funcionamento geral da empresa. As principais áreas funcionais incluem:
+
+      Marketing: Responsável por identificar e satisfazer as necessidades dos clientes, promovendo produtos ou serviços e gerenciando estratégias de comunicação e vendas.
+
+      Finanças: Encarregada de gerenciar os recursos financeiros da empresa, incluindo orçamento, investimentos, controle de custos, análise de rentabilidade e gestão de riscos financeiros.
+
+      Recursos Humanos: Concentra-se no recrutamento, seleção, treinamento, desenvolvimento e gerenciamento de pessoal, além de lidar com questões relacionadas a salários, benefícios e relações de trabalho.
+
+      Produção ou Operações: Responsável pela produção ou entrega de produtos ou serviços, incluindo planejamento de produção, controle de qualidade, gestão de estoques e logística.
+
+      Pesquisa e Desenvolvimento (P&D): Dedica-se à criação e aprimoramento de produtos, processos e tecnologias inovadoras que impulsionam o crescimento e a competitividade da empresa.
+
+      TI (Tecnologia da Informação): Encarregada de gerenciar sistemas de informação, redes, hardware e software para apoiar as operações da empresa, comunicação interna e externa, análise de dados e tomada de decisões.
+
+      Administração Geral: Responsável pela coordenação e integração das diferentes áreas funcionais, definição de objetivos organizacionais, formulação de políticas e estratégias, e tomada de decisões de alto nível.
+
+  Cada área funcional desempenha um papel essencial no sucesso e na eficiência global da organização, trabalhando em conjunto para atingir os objetivos e metas estabelecidos."
+      class="item"/>
+    </div>
+    <div class="articles__main">
+      <app-big-card
+      id="15"
+      photoCover="https://fia.com.br/wp-content/uploads/2023/09/Imagem7.png"
+      cardTitle="Sustentabilidade"
+      cardDescription="O que é sustentabilidade? Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental."
+      class="item"/>
+    </div>
+
   </div>
-
-  <div class="articles__others">
-    <app-big-card
-    id="6"
-    photoCover="https://0701.static.prezi.com/preview/v2/aa3qk6fv7ebhz6ahmho7jtaxft6jc3sachvcdoaizecfr3dnitcq_3_0.png"
-    cardTitle="Areas Funcionais da ADM"
-    cardDescription="As áreas funcionais da administração referem-se às diferentes divisões ou departamentos em uma organização, cada uma responsável por funções específicas que contribuem para o funcionamento geral da empresa. As principais áreas funcionais incluem:
-
-    Marketing: Responsável por identificar e satisfazer as necessidades dos clientes, promovendo produtos ou serviços e gerenciando estratégias de comunicação e vendas.
-
-    Finanças: Encarregada de gerenciar os recursos financeiros da empresa, incluindo orçamento, investimentos, controle de custos, análise de rentabilidade e gestão de riscos financeiros.
-
-    Recursos Humanos: Concentra-se no recrutamento, seleção, treinamento, desenvolvimento e gerenciamento de pessoal, além de lidar com questões relacionadas a salários, benefícios e relações de trabalho.
-
-    Produção ou Operações: Responsável pela produção ou entrega de produtos ou serviços, incluindo planejamento de produção, controle de qualidade, gestão de estoques e logística.
-
-    Pesquisa e Desenvolvimento (P&D): Dedica-se à criação e aprimoramento de produtos, processos e tecnologias inovadoras que impulsionam o crescimento e a competitividade da empresa.
-
-    TI (Tecnologia da Informação): Encarregada de gerenciar sistemas de informação, redes, hardware e software para apoiar as operações da empresa, comunicação interna e externa, análise de dados e tomada de decisões.
-
-    Administração Geral: Responsável pela coordenação e integração das diferentes áreas funcionais, definição de objetivos organizacionais, formulação de políticas e estratégias, e tomada de decisões de alto nível.
-
-Cada área funcional desempenha um papel essencial no sucesso e na eficiência global da organização, trabalhando em conjunto para atingir os objetivos e metas estabelecidos."
-    class="item"/>
-  </div>
-  <div class="articles__main">
-    <app-big-card
-    id="15"
-    photoCover="https://fia.com.br/wp-content/uploads/2023/09/Imagem7.png"
-    cardTitle="Sustentabilidade"
-    cardDescription="O que é sustentabilidade? Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental."
-    class="item"/>
-  </div>
-
 </div>
+
